fix wrap

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -10,7 +10,7 @@
 
 
 h1 {
-  font-size: calc(30px + 1vw);
+  font-size: calc(27px + 1vw);
   line-height: calc(1.1em + 1vw);
 }
 
